src/objects/Property_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Expiry_Date__c</fullName>
        <label>Contract Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License to Occupy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contractual_Term__c</fullName>
        <label>Contractual Term</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contratual_Term_Approx__c</fullName>
        <formula>IF ( Contratual_Term_days__c &gt; 0, 
TEXT(FLOOR( Contratual_Term_days__c/365.2425)) &amp; &quot; Year(s) &quot; &amp; 
TEXT( FLOOR( 12 * ( (Contratual_Term_days__c/365.2425) - FLOOR((Contratual_Term_days__c/365.2425)) ))) &amp; &quot; Month(s) and &quot; &amp; 
TEXT( ROUND(30.25 * (ROUND( 12 * ( (Contratual_Term_days__c/365.2425) - FLOOR((Contratual_Term_days__c/365.2425)) ),8) - FLOOR( 
ROUND( 12 * ( (Contratual_Term_days__c/365.2425) - FLOOR((Contratual_Term_days__c/365.2425)) ),8)) ),0)) &amp; &quot; Day(s) &quot; 
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contractual Term Approx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contratual_Term_days__c</fullName>
        <formula>Contract_Expiry_Date__c  -  Contract_Start_Date__c + 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contratual Term days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Early_Break_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Break Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTA_1954_Applies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LTA 1954 Applies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_service_charge_record__c</fullName>
        <label>Latest service charge record</label>
        <summarizedField>Property_Insurance__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Property_Insurance__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Service Charge</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Insurance__c.Property_Contract__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lease_Contract_Status__c</fullName>
        <formula>IF( AND(text(Location__r.Property_Status__c) =&quot;Vacant&quot;,Contract_Expiry_Date__c &lt; TODAY()),&quot;Expired&quot;,
IF( AND(text(Location__r.Property_Status__c) =&quot;Occupied&quot;,Contract_Expiry_Date__c &lt; TODAY(),Contract_Expiry_Date__c &gt; Location__r.Latest_start_date__c ),&quot;Hold Over&quot;,
IF(AND(text(Location__r.Property_Status__c) =&quot;Occupied&quot;,Contract_Expiry_Date__c &lt; TODAY(), Contract_Expiry_Date__c &lt; Location__r.Latest_start_date__c ) ,&quot;Expired&quot;,
IF( AND(text(Location__r.Property_Status__c) =&quot;Vacant&quot;,Contract_Start_Date__c &gt; TODAY()),&quot;Future&quot;,
IF( AND(text(Location__r.Property_Status__c) =&quot;Occupied&quot;,Contract_Start_Date__c &gt; TODAY()),&quot;Future&quot;,
IF( AND(text(Location__r.Property_Status__c) =&quot;Vacant&quot;,Contract_Expiry_Date__c &gt; TODAY()),&quot;Current&quot;,
IF( AND(text(Location__r.Property_Status__c) =&quot;Occupied&quot;,Contract_Expiry_Date__c &gt; TODAY()),&quot;Current&quot;,
&quot;&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Contract Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Property</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Property Contracts</relationshipLabel>
        <relationshipName>Property_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rent_Commencement_Date__c</fullName>
        <label>Rent Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Payable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Charge Payable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Term_months__c</fullName>
        <formula>IF(MONTH( Contract_Expiry_Date__c ) - MONTH( Contract_Start_Date__c ) &lt; 0, 
12 + (MONTH( Contract_Expiry_Date__c ) - MONTH( Contract_Start_Date__c )),
MONTH( Contract_Expiry_Date__c ) - MONTH( Contract_Start_Date__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_years__c</fullName>
        <formula>IF(  Contratual_Term_days__c  &gt; 365, 
YEAR( Contract_Expiry_Date__c ) - YEAR( Contract_Start_Date__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Term years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAT_Payable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT Payable</label>
        <type>Checkbox</type>
    </fields>
    <label>Property Contract</label>
    <nameField>
        <displayFormat>PCN-{00}</displayFormat>
        <label>Property Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>After_Contract_Start_Date</fullName>
        <active>true</active>
        <description>Expiry date must always be after start date</description>
        <errorConditionFormula>Contract_Expiry_Date__c   &lt; Contract_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Contract_Expiry_Date__c</errorDisplayField>
        <errorMessage>Must be after Contract Start Date</errorMessage>
    </validationRules>
</CustomObject>